# Omni

./: .env  .gitignore  LICENSE  Makefile  README.md  docker-compose.env.example  docker-compose.infrastructure.yml  docker-compose.production.yml  docker-compose.services.yml  docker-compose.yml
.github/workflows/: landing.yml  release-client.yml
docs/: deploy-docker-production.md
docs/ai/: architecture.md  clickhouse_schema.md  implementation_plan.md
docs/plans/: 2025-03-08-account-screen-design.md  2025-03-08-auth-backend-design.md  2025-03-08-auth-backend-implementation.md  2025-03-09-api-data-contracts-productivity.md  2025-03-09-client-ux-audit.md  2025-03-09-metrics-rollout-productivity.md
src/Omni.AI/: Dockerfile  README.md
src/Omni.Backend/: .dockerignore  .env.example  .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  go.mod  go.sum
src/Omni.Client/: AccountPage.xaml  AccountPage.xaml.cs  ActiveWindowTrackerMacOS.cs  ActiveWindowTrackerStub.cs  ActiveWindowTrackerWindows.cs  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  BackendOptions.cs  CalendarPage.xaml  CalendarPage.xaml.cs  CategoryResolver.cs  ChatPage.xaml  ChatPage.xaml.cs  (+19 more)
src/Omni.Client.Tests/: AuthServiceTests.cs  CalendarServiceTests.cs  ChatServiceTests.cs  FocusScoreServiceTests.cs  ModelTests.cs  Omni.Client.Tests.csproj  ProductivityServiceTests.cs  SessionServiceTests.cs  SyncServiceTests.cs  TaskServiceTests.cs
src/omni-ai/: Dockerfile  README.md  pyproject.toml
src/omni-ai/app/: algorithm.py  chat.py  db.py  main.py  notifications_db.py  scheduler.py
(+240 files in other folders)
